# jobsGrep

./: .gitignore  bot.py  config.py  db.py  filters.py  main.py  notify.py  pyproject.toml
.github/workflows/: jobgrep.yml
scrapers/: jobspy_scraper.py
